# pdf_inference

./: .cursorignore  .cursorrules  .gitignore  CURSOR_QUICK_REFERENCE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RECOMMENDED_CLEANUP.md  gwas_extraction_demo.ipynb  pyproject.toml  requirements.txt
docs/: ENV_TEMPLATE.md  README.md
docs/deployment/: snowflake-notebooks.md
docs/development/: 3-way-merge-simplification.md  batch-processing-guide.md  cursor-setup-notes.md  database-refactoring-plan.md  refactoring-complete.md  scrollable-displays-guide.md
docs/security/: SECURITY_CHECKLIST.md
sql/setup/: recreate_app.sql  setup.sql  setup_container.sql
streamlit_app/: environment.yml  pyproject.toml  requirements.txt  snowflake.yml  streamlit_app.py
